# contract-verifier

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  app.py  pyproject.toml  requirements.txt
projects/: _template.json  kriopigi.json  peraia.json  the-pearl.json
skills/: docx-table-extraction.md  drive-folder-navigation.md  hebrew-pdf-extraction.md
src/contract_verifier/: __init__.py  __main__.py  compute_precontract.py  drive_fetch.py  extract_contract.py  extract_precontract.py  extract_reservation.py  main.py  models.py  project_config.py  report.py  verify.py
tasks/: checks-reference.md  critical-finding-cost-base.md  lessons.md  todo.md
tests/: test_compute_precontract.py  test_extract_contract.py  test_extract_precontract.py  test_extract_reservation.py  test_models.py  test_project_config.py  test_verify.py
tests/fixtures/: נילי_שטרן_ביבר-_הסכם_מאסטר_חלקידיקי_סופי.docx
